# MARTA

./: .env  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  MANIFEST.in  Makefile  README  README.md  README.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  ubench.py
.github/workflows/: python-package.yml
analyzer/: README.txt  analyzer.py  config.yml  parse_tree.py  prepare_data.py  recommender.py  wrapper.py
analyzer/utils/: utilities.py  weka_cmd.py
docs/: conf.py  requirements.txt
docs/report/: report.tex
docs/source/: about.rst  conf.py  configuration.rst  index.rst  installation.rst  macros.rst  marta.analyzer.rst  marta.profiler.rst  marta.rst  marta.utils.rst  usage.rst
examples/: README.md
examples/asm/: analyzer.yml  profiler.yml  profiler_double_128.yml  profiler_double_256.yml  profiler_double_512.yml  profiler_float_128.yml  profiler_float_256.yml  profiler_float_512.yml
examples/autovectorization/: README.md  config_analyzer.yml  config_profiler.yml
examples/copy_array/: profiler.yml
examples/gather_scatter/: README.md  analyzer.yml  config_analyzer.yml  config_profiler.yml  debug.yml  gather.sh  gather_hotcache.sh  profiler_2elems.yml  profiler_2elems_hotcache.yml  profiler_3elems.yml  profiler_3elems_hotcache.yml  profiler_4elems.yml  profiler_4elems_hotcache.yml  profiler_5elems.yml  profiler_5elems_hotcache.yml  profiler_6elems.yml  profiler_6elems_hotcache.yml  profiler_7elems.yml  profiler_7elems_hotcache.yml  profiler_8elems.yml  profiler_8elems_hotcache.yml
examples/loop_interchange/: README.md  config_analyzer.yml  config_profiler.yml
examples/matrices/: Dubcova3_4redux_noorphan_fuse.yml  Dubcova3_4redux_orphan_fuse.yml  Hamrle3_4redux_noorphan_fuse.yml  Hamrle3_4redux_orphan_fuse.yml  IMDB_4redux_noorphan_fuse.yml  IMDB_4redux_orphan_fuse.yml  Rucci1_4redux_noorphan_fuse.yml  Rucci1_4redux_orphan_fuse.yml  TSOPF_FS_b39_c30_4redux_noorphan_fuse.yml  TSOPF_FS_b39_c30_4redux_orphan_fuse.yml  al2010_4redux_noorphan_fuse.yml  al2010_4redux_orphan_fuse.yml  amazon0312_4redux_noorphan_fuse.yml  amazon0312_4redux_orphan_fuse.yml  apache2_4redux_noorphan_fuse.yml  apache2_4redux_orphan_fuse.yml  barrier2-2_4redux_noorphan_fuse.yml  barrier2-2_4redux_orphan_fuse.yml  big_matrices.sh  big_matrices_4redux_noorphan_fuse.yml  big_matrices_4redux_noorphan_nofuse.yml  big_matrices_4redux_orphan_fuse.yml  big_matrices_4redux_orphan_nofuse.yml  big_matrices_8redux_noorphan_fuse.yml  big_matrices_8redux_noorphan_nofuse.yml  big_matrices_8redux_orphan_fuse.yml  big_matrices_8redux_orphan_nofuse.yml  cant_4redux_noorphan_fuse.yml  cant_4redux_orphan_fuse.yml  cfd2_4redux_noorphan_fuse.yml  cfd2_4redux_orphan_fuse.yml  crashbasis_4redux_noorphan_fuse.yml  crashbasis_4redux_orphan_fuse.yml  delaunay_n19_4redux_noorphan_fuse.yml  delaunay_n19_4redux_orphan_fuse.yml  fe_rotor_4redux_noorphan_fuse.yml  fe_rotor_4redux_orphan_fuse.yml  gas_sensor_4redux_noorphan_fuse.yml  gas_sensor_4redux_orphan_fuse.yml  generate_config_file_matrix.py  (+51 more)
examples/multithread/: multithread_profiler.yml
examples/packing/: config_analyzer.yml  config_profiler.yml
examples/sat_packing/: generate_macveth_model.py  profiler.yml  profiler_hotcache.yml
examples/stream/: MARTA.mk  Makefile  analyzer.yml  config_profiler.yml  gold_batch.sh  gold_cascadelake.yml  gold_cascadelake_1.yml  gold_cascadelake_16.yml  gold_cascadelake_2.yml  gold_cascadelake_24.yml  gold_cascadelake_4.yml  gold_cascadelake_8.yml  profile_cascadelake.yml  (+6 more)
marta/: version.py
profiler/: Makefile  README.md  README.txt  asm_analyzer.py  config.yml  measurements.py  profiler  profiler.py
src/: __init__.py
tests/: MARTA.mk  README.md  test_asm_analyzer.py  test_benchmark.py  test_kernel.py  test_marta_utilities.py  test_profiler.py  test_report.py  test_version.py
ubench/: Makefile  config.yml  ubench.py
weka-scripts/: README
(+6623 files in other folders)
