[metadata]
name = marta
version = file: __version__
author = Marcos Horro
author_email = marcos.horro@udc.es
description = Micro-ARchitectural Toolkit for Analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/markoshorro/MARTA
project_urls =
    Documentation = https://github.com/markoshorro/MARTA/README.md
    Bug Tracker = https://github.com/markoshorro/MARTA/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: C
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: System :: Benchmark
    Topic :: System :: Hardware

[options]
packages = profiler, analyzer
package_dir =
    = marta/
install_requires =
    py-cpuinfo
    tqdm
    sklearn
    pandas
    numpy
    pyyaml
    graphviz

python_requires = >=3.7

[options.package_data]
profiler = data/*, data/utilities/*, data/new_bench/*

[options.packages.find]
where = marta/

[options.entry_points]
console_scripts =
    marta_profiler = profiler:entry_point
    marta_analyzer = analyzer:entry_point