[metadata]
name = marta
version = file: src/marta/__version__
author = Marcos Horro
author_email = marcos.horro@udc.es
description = Micro-ARchitectural Toolkit for Analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/markoshorro/MARTA
project_urls =
    Documentation = https://github.com/markoshorro/MARTA/README.md
    Bug Tracker = https://github.com/markoshorro/MARTA/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: C
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: System :: Benchmark
    Topic :: System :: Hardware

[options]
include_package_data = True
packages = marta, marta.profiler, marta.utils, marta.analyzer
package_dir =
    = src/
install_requires =
    py-cpuinfo
    colorama
    art
    tqdm
    sklearn
    pandas
    numpy
    pyyaml
    graphviz
    pyperf
    matplotlib
    seaborn
    KDEpy
    dtreeviz

python_requires = >=3.7

[options.package_data]
marta.profiler = src/marta/data/*, src/marta/data/utilities/*, src/marta/data/marta_bench/*, src/marta/data/marta_microbench/*, src/*

[options.packages.find]
where = src/

[options.entry_points]
console_scripts =
    marta_profiler = marta.profiler.cli:cli
    marta_analyzer = marta.analyzer.cli:cli

[tool:pytest]
testpaths = tests/